Proyecto2/Kubernetes/consumer-losers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: losers-consumer
  namespace: sopes1
spec:
  selector:
    matchLabels:
      app: losers-consumer
  template:
    metadata:
      labels:
        app: losers-consumer
    spec:
      containers:
      - name: losers-consumer
        image: juliozaldana/losers-go-consumer:v5
        resources:
          limits:
            cpu: "0.1"
            memory: "128Mi"
