Proyecto2/Kubernetes/consumer-winners.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: winners-consumer
  namespace: sopes1
spec:
  selector:
    matchLabels:
      app: winners-consumer
  template:
    metadata:
      labels:
        app: winners-consumer
    spec:
      containers:
      - name: winners-consumer
        image: juliozaldana/winners-go-consumer:v4
        resources:
          limits:
            cpu: "0.1"
            memory: "128Mi"
