Proyecto2/Kubernetes/goboxeo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-server-boxeo
  namespace: sopes1
spec:
  selector:
    matchLabels:
      app: grpc-server-boxeo
  template:
    metadata:
      labels:
        app: grpc-server-boxeo
    spec:
      containers:
      - name: grpc-server-boxeo
        image: juliozaldana/boxeo-go-container:v2
        resources:
          limits:
            memory: "128Mi"
            cpu: "0.1"
        ports:
        - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: go-boxeo #DNS
  namespace: sopes1
spec:
  selector:
    app: grpc-server-boxeo
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
  type: ClusterIP
