Proyecto2/Kubernetes/gonatacion.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-server-natacion
  namespace: sopes1
spec:
  selector:
    matchLabels:
      app: grpc-server-natacion
  template:
    metadata:
      labels:
        app: grpc-server-natacion
    spec:
      containers:
      - name: grpc-server-natacion
        image: juliozaldana/natacion-go-container:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "0.1"
        ports:
        - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: go-natacion #DNS
  namespace: sopes1
spec:
  selector:
    app: grpc-server-natacion
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
  type: ClusterIP
